# ryujinx_python_client

./: README.md  pyproject.toml
examples/: streaming.py
ryujinx_python_client/: __init__.py  app.py  game_control.py
